--- a/styles/main.scss
+++ b/styles/main.scss
@@ -155,6 +155,8 @@ figure{
 }
 .AddTodo{
     input{
+        font-family: $main-font;
+        font-weight:400;
         caret-color: $bright-blue;
         box-sizing: border-box;
         padding: 15px 15px 15px 45px;
@@ -163,6 +165,7 @@ figure{
         background-color: $very-dark-desaturated-blue;
         border: none;
         border-radius: 4px;
+        color: $light-grayish-blue;
         &:focus{
             outline: none;
         }
@@ -185,8 +188,11 @@ figure{
     }
     input{
         background-color: $very-light-gray;
+        color: $very-dark-grayish-blue-2;
     }
-    .AddTodo-checkbox{
-        border-color: $very-light-grayish-blue;
+    .AddTodo{
+        &-checkbox{
+            border-color: $very-light-grayish-blue;
+        }
     }
 }
