--- a/styles/main.scss
+++ b/styles/main.scss
@@ -32,7 +32,12 @@ h1{
         align-items: center;
         justify-content: space-between; 
     }
-    
+    &__message{
+        color: $dark-grayish-blue;
+        font-size: 12px;
+        text-align: center;
+        margin-top: 50px;
+    }
     /* &__toggleTheme{
         position: absolute;
         top: 15%;
@@ -202,7 +207,11 @@ figure{
             border-color: $very-light-grayish-blue;
         }
     }
+    .todo-menu__options{
+        background-color: unset;
+    }
 }
+
 @media only screen and (min-width: 376px) {
     .todo-container {
         width: 80%;
