Solved bugs: √ Menu options: The All option was always shown as selected. It didn't highlight the selected option. √ Menu options: On hovering an option it highlighted both Active and Completed. √ You could add empty todos. √ A zero displayed at the end of the todo-container section when there are no Todos. √ Todos with the same id.
+Added Live Site URL to the Readme file.

--- a/styles/_todoMenu.scss
+++ b/styles/_todoMenu.scss
@@ -15,7 +15,7 @@
         li{
             padding-right: 10px;
         }
-        :hover{
+        li:hover{
             color: $very-light-gray;
             cursor: pointer;
         }
